# git-cascade

./: .envrc  .gitignore  Cargo.toml  Makefile.toml  README.md  flake.nix  plan.md  plan.yaml  state.md
.github/actions/nix-ci/: action.yml
.github/actions/rust-ci/: action.yml
.github/workflows/: ci.yml  release.yml
crates/git-cascade/: Cargo.toml
crates/git-cascade/src/: apply.rs  cli.rs  encoding.rs  error.rs  git.rs  lib.rs  main.rs  model.rs  plan.rs  plan_generate.rs  plan_name.rs  plan_validate.rs  recovery.rs  replay_backend.rs  state.rs  state_writer.rs  status.rs  storage.rs  test_hooks.rs  types.rs
crates/git-cascade/src/cli/: high_level.rs  landed.rs  mod.rs  plan.rs  status.rs
crates/git-cascade/src/plan/: generate.rs  mod.rs  topological.rs  validate.rs
crates/git-cascade/src/replay/: backend.rs  cleanup.rs  context.rs  mod.rs  pause.rs  state.rs  state_writer.rs  strategy.rs
crates/git-cascade/tests/: apply_dry_run.rs  apply_mutating.rs  cli_help.rs  high_level_commands.rs  interruption_safety.rs  list_show.rs  merge_replay.rs  plan_generation.rs  plan_validation.rs  recovery.rs  ref_safety.rs
crates/git-cascade/tests/common/: mod.rs  repo.rs
nix/: dev-shell.nix  git-cascade.nix
